--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,10 @@ metrics-exporter-prometheus = { version = "0.15", optional = true }
 # Organizations/Teams validation
 validator = { version = "0.16", features = ["derive"], optional = true }
 
+# OAuth/OIDC providers
+oauth2 = { version = "4.0", optional = true }
+openidconnect = { version = "4.0", optional = true }
+
 # Utilities
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -101,6 +105,8 @@ ssr = [
     "dep:metrics",
     "dep:metrics-exporter-prometheus",
     "dep:validator",
+    "dep:oauth2",
+    "dep:openidconnect",
     "leptos/ssr", 
     "leptos_meta/ssr", 
     "leptos_router/ssr", 
