- ✅ Optimized Docker builds with .dockerignore   - ✅ Safe update mechanism with rollback   - ✅ Client configuration templates for easy onboarding   - ✅ Let's Encrypt ready nginx configuration   - ✅ Production security hardening   - ✅ Comprehensive documentation

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,72 @@
-# Database configuration
-DATABASE_URL=sqlite:ghostcrate.db
+# GhostCrate Production Environment Variables
+# Copy this file to .env and fill in your values
 
-# Server configuration
-LEPTOS_SITE_ADDR=127.0.0.1:8080
+# Database
+DATABASE_URL=sqlite:/data/ghostcrate.db
+
+# Server Configuration
+GHOSTCRATE_HOST=0.0.0.0
+GHOSTCRATE_PORT=8080
+GHOSTCRATE_ENVIRONMENT=production
+
+# Domain Configuration - Update for your domain
+GHOSTCRATE_REGISTRY_BASE_URL=https://crates.cktechx.com
+GHOSTCRATE_REGISTRY_INDEX_URL=https://crates.cktechx.com
+GHOSTCRATE_CORS_ORIGINS=https://crates.cktechx.com,https://crates.cktechnology.io,https://crates.cktechx.io
+
+# Security - CHANGE THESE IN PRODUCTION!
+GHOSTCRATE_AUTH_JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+GHOSTCRATE_AUTH_BCRYPT_COST=12
+GHOSTCRATE_AUTH_SESSION_DURATION_HOURS=24
+
+# Rate Limiting
+GHOSTCRATE_RATE_LIMIT_REQUESTS_PER_MINUTE=120
+
+# Storage Configuration
+GHOSTCRATE_STORAGE_BACKEND=local
+GHOSTCRATE_STORAGE_LOCAL_PATH=/data
+
+# Optional: S3/MinIO Storage
+# GHOSTCRATE_STORAGE_BACKEND=s3
+# GHOSTCRATE_S3_BUCKET=ghostcrate
+# GHOSTCRATE_S3_REGION=us-east-1
+# GHOSTCRATE_S3_ENDPOINT=
+# GHOSTCRATE_S3_ACCESS_KEY_ID=
+# GHOSTCRATE_S3_SECRET_ACCESS_KEY=
+
+# Optional: GitHub OAuth
+# GHOSTCRATE_GITHUB_CLIENT_ID=your-github-client-id
+# GHOSTCRATE_GITHUB_CLIENT_SECRET=your-github-client-secret
+# GHOSTCRATE_GITHUB_REDIRECT_URL=https://crates.cktechx.com/api/github/callback
+
+# Optional: OIDC Authentication
+# Microsoft Entra ID (Azure AD)
+# GHOSTCRATE_OIDC_ENTRAID_CLIENT_ID=your-entraid-client-id
+# GHOSTCRATE_OIDC_ENTRAID_CLIENT_SECRET=your-entraid-client-secret
+# GHOSTCRATE_OIDC_ENTRAID_TENANT_ID=your-tenant-id
+# GHOSTCRATE_OIDC_ENTRAID_REDIRECT_URI=https://crates.cktechx.com/auth/oidc/entra/callback
+# GHOSTCRATE_OIDC_ENTRAID_AUTO_REGISTER=true
+
+# GitHub OIDC
+# GHOSTCRATE_OIDC_GITHUB_CLIENT_ID=your-github-client-id
+# GHOSTCRATE_OIDC_GITHUB_CLIENT_SECRET=your-github-client-secret
+# GHOSTCRATE_OIDC_GITHUB_REDIRECT_URI=https://crates.cktechx.com/auth/oidc/github/callback
+# GHOSTCRATE_OIDC_GITHUB_AUTO_REGISTER=true
+
+# Google OAuth
+# GHOSTCRATE_OIDC_GOOGLE_CLIENT_ID=your-google-client-id
+# GHOSTCRATE_OIDC_GOOGLE_CLIENT_SECRET=your-google-client-secret
+# GHOSTCRATE_OIDC_GOOGLE_REDIRECT_URI=https://crates.cktechx.com/auth/oidc/google/callback
+# GHOSTCRATE_OIDC_GOOGLE_AUTO_REGISTER=true
+
+# Registry Settings
+GHOSTCRATE_REGISTRY_NAME=GhostCrate
+
+# Monitoring
+GHOSTCRATE_MONITORING_ENABLED=true
+GHOSTCRATE_MONITORING_METRICS_ENABLED=true
+GHOSTCRATE_MONITORING_HEALTH_CHECK_INTERVAL_SECONDS=30
+
+# Logging
 RUST_LOG=info
-
-# JWT Secret (CHANGE THIS IN PRODUCTION!)
-JWT_SECRET=your-secret-key-change-this-in-production
-
-# Session duration in hours
-SESSION_DURATION_HOURS=168
+LEPTOS_SITE_ADDR=0.0.0.0:8080
